--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -8,6 +8,8 @@ $darkgrey: #686868;
  *           MainManu 
  ***********************************/
 
+
+
 h1 
   font-size: 4.375em !important
   font-family: 'Roboto', sans-serif !important
@@ -18,6 +20,8 @@ h1
   .header_title_right
     color: $lightgrey !important
 
+.text
+  font-family: 'Roboto', sans-serif !important
 
 .ui.inverted.menu
     border: 0 solid transparent !important
@@ -28,6 +32,11 @@ h1
     color: $darkgrey !important
 
 
+@media only screen and (max-width : 767px)
+  #menu-item-center
+    display: none
+  #menu-item-left
+    display: none
 
 @media only screen and (min-width : 768px)
   .ui.top.right.pointing.dropdown > .menu
@@ -40,10 +49,15 @@ h1
 
 
 
+
 /***********************************
  *           MainManu Modal
  ***********************************/
 
 p 
+  font-size: 1.5em !important
+  font-family: 'Roboto', sans-serif !important
+
+.content
   font-size: 1.5em !important
   font-family: 'Roboto', sans-serif !important
