--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -15,7 +15,7 @@ $darkgrey: #686868;
 
 
 /***********************************
- *           MainManu 
+ *           MainMenu 
  ***********************************/
 
 h1 
@@ -53,12 +53,11 @@ h1
     min-width: 150px !important
 
 
-
 /***********************************
  *           MainManu Dropdown
  ***********************************/
 
-.text
+.ui.menu .ui.dropdown.item .menu .item:not(.filtered) .text
   font-family: 'Roboto', sans-serif !important
   font-size: 1.5em !important
   margin-left: 40px !important
