--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -6,7 +6,7 @@ $darkgrey: #686868;
 
 
 /***********************************
- *           ControlArea 
+ *           Workspace 
  ***********************************/
 
 .ui.inverted.dimmer 
