Improve main.sass

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -5,16 +5,10 @@ $grey: #D3D3D3;
 $darkgrey: #686868;
 
 
+
 /***********************************
  *           Workspace 
  ***********************************/
-
-.ui.inverted.dimmer 
-    background-color: rgba(0, 0, 0, 0.6) !important
-
-.dimmed.dimmable > .ui.animating.dimmer, .dimmed.dimmable > .ui.visible.dimmer, .ui.active.dimmer 
-    opacity: 1 !important
-
 .ui.celled.grid > .row 
     width: 100% !important
     margin: 0
@@ -42,7 +36,6 @@ $darkgrey: #686868;
 /***********************************
  *           MainMenu 
  ***********************************/
-
 .text
   color: $darkgrey
 
@@ -131,7 +124,6 @@ i.icon.trash:before
 /***********************************
  *           MainManu Modal
  ***********************************/
-
 p 
   font-size: 1.5em !important
   font-family: 'Roboto', sans-serif !important
@@ -142,6 +134,16 @@ p
   font-family: 'Roboto', sans-serif !important
 
 
+/***********************************
+ *           Global Semantic 
+ ***********************************/
+.ui.dimmer 
+    background-color: rgba(0, 0, 0, 0.6) !important
+.ui.inverted.dimmer 
+    background-color: rgba(0, 0, 0, 0.6) !important
+
+.dimmed.dimmable > .ui.animating.dimmer, .dimmed.dimmable > .ui.visible.dimmer, .ui.active.dimmer 
+    opacity: 1 !important
 
 
 /***********************************
