--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -7,7 +7,34 @@ $darkgrey: #686868;
 
 
 /***********************************
- *           Workspace 
+ *       Workspace Animation 
+ ***********************************/
+.playobject 
+  animation: MoveUpDown 54s linear infinite
+  position: absolute
+  left: 0
+  bottom: 0
+
+  width: 1%
+  height: 560px
+  border-radius: 0px
+  //margin-right: 1.5em
+  //margin-left: 100px
+  top: 123px
+  background: rgba(0,0,0,0.2)
+  pointer-events: none
+  z-index: 2
+
+@keyframes MoveUpDown 
+  0%, 100%
+    left: 6.25%
+  
+  100% 
+    left: 93.75% - 1.5%
+  
+ 
+/***********************************
+ *            Workspace 
  ***********************************/
 .ui.celled.grid > .row 
     width: 100% !important
@@ -34,7 +61,7 @@ $darkgrey: #686868;
 
 
 /***********************************
- *           MainMenu 
+ *            MainMenu 
  ***********************************/
 .text
   color: $darkgrey
@@ -80,7 +107,7 @@ h1
 
 
 /***********************************
- *           MainManu Dropdown
+ *        MainMenu Dropdown
  ***********************************/
 .ui.top.right.pointing.dropdown > .menu
     top: 100%
@@ -122,7 +149,7 @@ i.icon.trash:before
 
 
 /***********************************
- *           MainManu Modal
+ *          MainMenu Modal
  ***********************************/
 p 
   font-size: 1.5em !important
@@ -133,9 +160,30 @@ p
   font-size: 1.5em !important
   font-family: 'Roboto', sans-serif !important
 
+.ui.basic.modal > .header
+    color: #fff
+    font-size: 40px !important
+
+.ui.modal > .header
+    display: block
+    font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif
+    background: #fff
+    margin: 0
+    padding: 1.25rem 1.5rem
+    -webkit-box-shadow: none
+    box-shadow: none
+    color: rgba(0, 0, 0, 0.85)
+    border-bottom: 0px solid rgba(34, 36, 38, 0.15) !important
+
+.ui.modal > .actions
+    background: #f9fafb
+    padding: 1rem 1rem
+    border-top: 0px solid rgba(34, 36, 38, 0.15) !important
+    text-align: right
+
 
 /***********************************
- *           Global Semantic 
+ *          Global Semantic 
  ***********************************/
 .ui.dimmer 
     background-color: rgba(0, 0, 0, 0.6) !important
@@ -147,7 +195,7 @@ p
 
 
 /***********************************
- *           Global Settings
+ *          Global Settings
  ***********************************/
 body 
     margin: 0
