Add play button

--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -20,7 +20,7 @@ $darkgrey: #686868;
   border-radius: 0px
   //margin-right: 1.5em
   //margin-left: 100px
-  top: 123px
+  top: 125px
   background: rgba(0,0,0,0.2)
   pointer-events: none
   z-index: 2
@@ -149,6 +149,13 @@ i.icon.trash:before
 
 
 /***********************************
+ *      MainMenu Play Button
+ ***********************************/
+.ui.header span .icon
+    color: $darkgrey !important
+
+
+/***********************************
  *          MainMenu Modal
  ***********************************/
 p 
@@ -207,4 +214,3 @@ body
     font-size: 14px
     line-height: 1.4285em
     color: rgba(0, 0, 0, 0.87)
-
