--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -25,8 +25,8 @@ $darkgrey: #686868;
     top: -70px !important
     position: absolute
     top: 0
-    left: 50px !important
-    margin-left: -5px
+    left: 3.2em !important
+    margin-left: 0%
     z-index: 0
 
 .toneLineOne
@@ -145,6 +145,14 @@ $darkgrey: #686868;
 /***********************************
  *        MainMenu Dropdown
  ***********************************/
+.ui.menu .item > i.icon
+    opacity: .9
+    float: none
+    margin: 0 .35714286em 0 0
+    text-align: right !important
+    font-size: 4.2em
+    z-index: 10 !important
+
 .ui.top.right.pointing.dropdown > .menu
     top: 100%
     bottom: auto
