--- a/src/sass/main.sass
+++ b/src/sass/main.sass
@@ -27,7 +27,7 @@ $darkgrey: #686868;
     top: 0
     left: 3.2em !important
     margin-left: 0%
-    z-index: 0
+    //z-index: 0
 
 .toneLineOne
   position: absolute
@@ -42,7 +42,7 @@ $darkgrey: #686868;
   //margin-left: 100px
   //background: $grey
   pointer-events: none
-  z-index: 2
+  z-index: -1
 
 
 /***********************************
@@ -173,7 +173,6 @@ $darkgrey: #686868;
   font-weight: 700 !important
   padding:  40px !important
 
-
 i.icon.sign.out:before 
   content: "\F2F5"
   font-size: 2.7em !important
@@ -249,6 +248,7 @@ p
  ***********************************/
 .ui.dimmer 
     background-color: rgba(0, 0, 0, 0.6) !important
+
 .ui.inverted.dimmer 
     background-color: rgba(0, 0, 0, 0.6) !important
 
