Add pitch & volume

--- a/src/assets/css/main.sass
+++ b/src/assets/css/main.sass
@@ -4,7 +4,12 @@ $lightgrey: #F2F2F2;
 $grey: #D3D3D3;
 $darkgrey: #686868;
 
-
+/***********************************
+ *       Popup 
+ ***********************************/
+.ui.flowing.popup 
+    max-width: none
+    min-width: 500px !important
 
 /***********************************
  *       Settings 
@@ -283,6 +288,10 @@ h2
   font-family: 'Roboto', sans-serif !important
   color: $darkgrey
 
+h3
+  font-size: 3.375em !important
+  font-family: 'Roboto', sans-serif !important
+  color: $darkgrey
 body 
     margin: 0
     padding: 0
