--- a/src/assets/css/main.sass
+++ b/src/assets/css/main.sass
@@ -192,6 +192,11 @@ $darkgrey: #686868;
   font-weight: 700 !important
   padding:  40px !important
 
+i.icon.download:before 
+  content: "\F019"
+  font-size: 2.7em !important
+  color: $darkgrey
+
 i.icon.sign.out:before 
   content: "\F2F5"
   font-size: 2.7em !important
