--- a/src/assets/css/main.sass
+++ b/src/assets/css/main.sass
@@ -27,7 +27,7 @@ $darkgrey: #686868;
     background: $grey
     width: 11px
     height: 60%
-    top: -85px !important
+    top: -76px !important
     position: absolute
     top: 0
     left: 3.2em !important
@@ -45,7 +45,7 @@ $darkgrey: #686868;
   bottom: 0
   padding: 0 !important
   width: 3px !important
-  height: 200px
+  height: 160px
   border-radius: 0px
   //margin-right: 1.5em
   //margin-left: 100px
@@ -297,6 +297,12 @@ h3
   font-size: 3.375em !important
   font-family: 'Roboto', sans-serif !important
   color: $darkgrey
+
+h4
+  font-size: 2.375em !important
+  font-family: 'Roboto', sans-serif !important
+  color: $darkgrey
+
 body 
     margin: 0
     padding: 0
