--- a/src/assets/css/main.sass
+++ b/src/assets/css/main.sass
@@ -1,43 +1,40 @@
 @import url('https://fonts.googleapis.com/css?family=Markazi+Text|Roboto:400,400i,700,700i')
 
+/***********************************
+ *  Global Colors
+ ***********************************/
 $lightgrey: #F2F2F2;
 $grey: #D3D3D3;
 $darkgrey: #686868;
-
 /***********************************
- *       Popup 
+ *  Popup 
  ***********************************/
 .ui.flowing.popup 
-    max-width: none
-    min-width: 500px !important
-
+  max-width: none
+  min-width: 500px !important
 /***********************************
- *       Settings 
+ *  Settings 
  ***********************************/
 .ui.segment:last-child
-    margin-bottom: 0
-    background-color: $lightgrey !important
-
+  margin-bottom: 0
+  background-color: $lightgrey !important
 /***********************************
- *       Workspace Tone Lines 
+ *  Workspace Tone Lines 
  ***********************************/
 .toneLineOne::before 
-    display: block
-    content: ' '
-    background: $grey
-    width: 11px
-    height: 60%
-    top: -76px !important
-    position: absolute
-    top: 0
-    left: 3.2em !important
-    margin-left: 0%
-    //z-index: -2
-    opacity: 0.5
-    border: 2px solid $grey
-    border-radius: 25px
-
-
+  display: block
+  content: ' '
+  background: $grey
+  width: 11px
+  height: 60%
+  top: -76px !important
+  position: absolute
+  top: 0
+  left: 3.2em !important
+  margin-left: 0%
+  opacity: 0.5
+  border: 2px solid $grey
+  border-radius: 25px
 .toneLineOne
   position: absolute
   top: 0px
@@ -52,74 +49,59 @@ $darkgrey: #686868;
   //background: $grey
   pointer-events: none
   z-index: -1
-  
   //opacity: 0.25
-
 //.link::before
  // opacity: 0.5 !important
-
-
-
 /***********************************
- *       Workspace Animation 
+ *  Workspace Animation 
  ***********************************/
 .playobject 
   animation: MoveLeftRight 2s linear infinite
   position: absolute
   left: 0
   bottom: 0
-
   width: 1%
   height: 560px
   border-radius: 0px
-  //margin-right: 1.5em
-  //margin-left: 100px
   top: 125px
   background: rgba(0,0,0,0.2)
   pointer-events: none
   z-index: 3
-
 @keyframes MoveLeftRight 
   0%, 100%
     left: 8%
   100% 
     left: 93.75% - 2%
-
-/*MoveLeftRight 
+@keyframes MoveLeftRightOld 
   0%, 100%
     left: 6.25%
   100% 
-    left: 93.75% - 1.5% */
- 
+    left: 93.75% - 1.5%
 /***********************************
- *            Workspace 
+ *  Workspace 
  ***********************************/
 .ui.celled.grid > .row 
-    width: 100% !important
-    margin: 0
-    padding-top: 1em !important
-    padding-bottom: 1em !important
-    padding: 0
-    -webkit-box-shadow: 0 -1px 0 0 #d4d4d5
-    box-shadow: 0 -1px 0 0 #d4d4d5
-
+  width: 100% !important
+  margin: 0
+  padding-top: 1em !important
+  padding-bottom: 1em !important
+  padding: 0
+  -webkit-box-shadow: 0 -1px 0 0 #d4d4d5
+  box-shadow: 0 -1px 0 0 #d4d4d5
 .ui.celled.grid 
-    width: 100%
-    margin: 1em 0
-    margin-right: 0px
-    margin-bottom: 1em
-    margin-left: 0px
-    margin-top: 0px !important
-    -webkit-box-shadow: 0 0 0 1px #d4d4d5
-    box-shadow: 0 0 0 1px #d4d4d5
-
+  width: 100%
+  margin: 1em 0
+  margin-right: 0px
+  margin-bottom: 1em
+  margin-left: 0px
+  margin-top: 0px !important
+  -webkit-box-shadow: 0 0 0 1px #d4d4d5
+  box-shadow: 0 0 0 1px #d4d4d5
 .ui.massive.menu 
-    font-size: 1.28571429rem
-    margin-bottom: 0px !important
-
-
+  font-size: 1.28571429rem
+  margin-bottom: 0px !important
 /***********************************
- *            MainMenu 
+ *  MainMenu 
  ***********************************/
 .text
   color: $darkgrey
@@ -127,30 +109,25 @@ $darkgrey: #686868;
   color: $darkgrey !important
 .header_title_right
   color: $lightgrey !important
-
 .ui.inverted.menu
   border: 0 solid transparent !important
   background: $grey !important
   z-index: 10 !important
-
 .ui.inverted.menu .item, .ui.inverted.menu .item > a:not(.ui) 
   background: 0 0 !important
   color: $darkgrey !important
   z-index: 10 !important
-
 .ui.menu .item > i.icon
-    opacity: .9
-    float: none
-    margin: 0 .35714286em 0 0
-    text-align: right !important
-    z-index: 10 !important
-    
+  opacity: .9
+  float: none
+  margin: 0 .35714286em 0 0
+  text-align: right !important
+  z-index: 10 !important
 @media only screen and (max-width : 767px)
   #menu-item-center
     display: none
   #menu-item-left
     display: none
-
 @media only screen and (min-width : 768px)
   .ui.top.right.pointing.dropdown > .menu
     top: 100%
@@ -159,157 +136,127 @@ $darkgrey: #686868;
     left: auto
     margin: 1em 0 0
     min-width: 150px !important
-
-
 /***********************************
- *        MainMenu Dropdown
+ *  MainMenu Dropdown
  ***********************************/
 .ui.menu .item > i.icon
-    opacity: .9
-    float: none
-    margin: 0 .35714286em 0 0
-    text-align: right !important
-    font-size: 4.2em
-    z-index: 10 !important
-
+  opacity: .9
+  float: none
+  margin: 0 .35714286em 0 0
+  text-align: right !important
+  font-size: 4.2em
+  z-index: 10 !important
 .ui.top.right.pointing.dropdown > .menu
-    top: 100%
-    bottom: auto
-    right: 0
-    left: auto
-    margin: 1em 0 0
-    z-index: 9000 !important
-
+  top: 100%
+  bottom: auto
+  right: 0
+  left: auto
+  margin: 1em 0 0
+  z-index: 9000 !important
 .ui.menu .ui.dropdown.item .menu .item:not(.filtered) .text
   font-family: 'Roboto', sans-serif !important
   font-size: 1.5em !important
   margin-left: 40px !important
-
 .ui.menu .ui.dropdown.item .menu .item:not(.filtered)
   display: block
   font-size: 2rem !important
   font-family: 'Roboto', sans-serif !important
   font-weight: 700 !important
   padding:  40px !important
-
 i.icon.download:before 
   content: "\F019"
   font-size: 2.7em !important
   color: $darkgrey
-
 i.icon.sign.out:before 
   content: "\F2F5"
   font-size: 2.7em !important
   color: $darkgrey
-
 i.icon.setting:before 
   content: "\F013"
   font-size: 2.7em !important
   color: $darkgrey
-
 i.icon.folder:before
   content: "\F07B"
   font-size: 2.7em !important
   color: $darkgrey
-
 i.icon.file:before 
   content: "\F15B"
   font-size: 2.7em !important
   color: $darkgrey
-
 i.icon.trash:before 
   content: "\F1F8"
   font-size: 2.7em !important
   color: $darkgrey
-
 .ui.button > .icon:not(.button) 
   height: 1em !important
-
-
 /***********************************
- *      MainMenu Play Button
+ *  MainMenu Play Button
  ***********************************/
 .ui.header span .icon
-    color: $darkgrey !important
-
-
+  color: $darkgrey !important
 /***********************************
- *          MainMenu Modal
+ *  MainMenu Modal
  ***********************************/
 p 
   font-size: 1.5em !important
   font-family: 'Roboto', sans-serif !important
   font-weight: 700 !important
-
 .content
   font-size: 1.5em !important
   font-family: 'Roboto', sans-serif !important
-
 .ui.basic.modal > .header
-    color: #fff
-    font-size: 40px !important
-
+  color: #fff
+  font-size: 40px !important
 .ui.modal > .header
-    display: block
-    font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif
-    background: #fff
-    margin: 0
-    padding: 1.25rem 1.5rem
-    -webkit-box-shadow: none
-    box-shadow: none
-    color: rgba(0, 0, 0, 0.85)
-    border-bottom: 0px solid rgba(34, 36, 38, 0.15) !important
-
+  display: block
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif
+  background: #fff
+  margin: 0
+  padding: 1.25rem 1.5rem
+  -webkit-box-shadow: none
+  box-shadow: none
+  color: rgba(0, 0, 0, 0.85)
+  border-bottom: 0px solid rgba(34, 36, 38, 0.15) !important
 .ui.modal > .actions
-    background: #f9fafb
-    padding: 1rem 1rem
-    border-top: 0px solid rgba(34, 36, 38, 0.15) !important
-    text-align: right
-
-
+  background: #f9fafb
+  padding: 1rem 1rem
+  border-top: 0px solid rgba(34, 36, 38, 0.15) !important
+  text-align: right
 /***********************************
- *          Global Semantic 
+ *  Global Semantic 
  ***********************************/
 .ui.dimmer 
-    background-color: rgba(0, 0, 0, 0.6) !important
-
+  background-color: rgba(0, 0, 0, 0.6) !important
 .ui.inverted.dimmer 
-    background-color: rgba(0, 0, 0, 0.6) !important
-
+  background-color: rgba(0, 0, 0, 0.6) !important
 .dimmed.dimmable > .ui.animating.dimmer, .dimmed.dimmable > .ui.visible.dimmer, .ui.active.dimmer 
-    opacity: 1 !important
-
-
+  opacity: 1 !important
 /***********************************
- *          Global Settings
+ *  Global Settings
  ***********************************/
 h1 
   font-size: 4.375em !important
   font-family: 'Roboto', sans-serif !important
   color: $darkgrey
-
 h2 
   font-size: 4.375em !important
   font-family: 'Roboto', sans-serif !important
   color: $darkgrey
-
 h3
   font-size: 3.375em !important
   font-family: 'Roboto', sans-serif !important
   color: $darkgrey
-
 h4
   font-size: 2.375em !important
   font-family: 'Roboto', sans-serif !important
   color: $darkgrey
-
 body 
-    margin: 0
-    padding: 0
-    overflow-x: hidden
-    min-width: 320px
-    background: $lightgrey !important
-    font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif
-    font-size: 14px
-    line-height: 1.4285em
-    color: rgba(0, 0, 0, 0.87)
+  margin: 0
+  padding: 0
+  overflow-x: hidden
+  min-width: 320px
+  background: $lightgrey !important
+  font-family: Lato,'Helvetica Neue',Arial,Helvetica,sans-serif
+  font-size: 14px
+  line-height: 1.4285em
+  color: rgba(0, 0, 0, 0.87)
